k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: wisecow
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: himanshu8090/wisecow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4499
        readinessProbe:
          httpGet:
            path: /
            port: 4499
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 4499
          initialDelaySeconds: 15
          periodSeconds: 20
